<resources>

    <string name="app_name">Talkin</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_checkbox_text">Keep me signed in</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_notification">Seems like you forgot to authorize the app?</string>
    <string name="title_activity_main_screen">CHAT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <string name="name_hint">Full Name</string>
    <string name="phone_hint">Phone</string>
    <string name="website_hint">Website</string>
    <string name="link_facebook_button">Link Facebook</string>
    <string name="forgot_password_dialog_title">Restore Password</string>
    <string name="dialog_positive_button">SEND</string>
    <string name="dialog_negative_button">CANCEL</string>
    <string name="compare_passwords_toast">Passwords do not match</string>
    <string name="invalid_email_toast">Invalid email</string>
    <string name="invalid_password_length_toast">Password length should be 6&#8211;12 symbols</string>
    <string name="password_is_weak_toast">Password is weak. Please use at least two digits and two capitalized letters</string>

    <!--Registration Screen-->
    <string name="title_activity_registration_screen">RegistrationScreen</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="alert_max_size_of_image">File is bigger than 1MB</string>
    <string name="alert_failed_to_load">Failed to load</string>
    <string name="registration_error">Registration failed</string>
    <string name="network_error">Network error</string>
    <string name="invalid_registration_data_error">Please, fill in all fields properly</string>

    <!--Facebook-->
    <string name="button_facebook_log_in">Link Facebook</string>
    <string name="button_facebook_linked">Linked</string>
    <string name="facebook_app_id">1792891837702820</string>

    <string name="main_screen_text">
        "           There are no chats yet."\n
        "<u>Invite friends</u> and start new chat."
    </string>
    <string name="invite_friends_label">INVITE FRIENDS</string>
    <string name="create_chat_label">NEW CHAT</string>
    <string name="users_label">FRIENDS</string>
    <string name="settings_label">SETTINGS</string>
    <string name="edit_chat_label">EDIT CHAT</string>
    <string name="action_filter">Filter</string>
    <string name="action_quantity">0</string>

</resources>
